Fix navigation: Make header logo clickable

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">
+            <a href="index.html" class="logo">
                 <span class="logo-icon">✈️</span>
                 <span class="logo-text">Plan.It</span>
-            </div>
+            </a>
             <!-- 로그인 전: 로그인/회원가입 버튼 -->
             <div class="auth-buttons" id="authButtons">
                 <button class="login-btn" id="loginBtn">
@@ -62,8 +62,8 @@
         <div class="hero-center-content">
             <!-- 메인 헤드라인 -->
             <h1 class="hero-headline">
-                2만 명이 선택한<br>
-                <span class="headline-accent">여행 계획법</span>
+                계획 스트레스 없이<br>
+                <span class="headline-accent">설렘만 주는 여행</span>
             </h1>
             <p class="hero-tagline">
                 맛집-교통-숙소-동선까지 5분 안에 자동 완성됩니다.
