--- a/itinerary.html
+++ b/itinerary.html
@@ -271,7 +271,6 @@
     <nav class="navbar scrolled">
         <div class="nav-container">
             <a href="index.html" class="logo">
-                <span class="logo-icon">✈️</span>
                 <span class="logo-text">Plan.It</span>
             </a>
             <button class="back-btn" onclick="location.href='index.html'">
@@ -283,7 +282,7 @@
 
     <!-- Itinerary Hero -->
     <section class="itinerary-hero" id="itineraryHero">
-        <h1 id="heroTitle">🗺️ 여행 일정</h1>
+        <h1 id="heroTitle">여행 일정</h1>
         <div class="route-display" id="routeDisplay">
             <!-- 여행 경로가 동적으로 표시됨 -->
         </div>
