Add Google Analytics tracking code to HTML files

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="ko">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KESMY9MVTT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-KESMY9MVTT');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="AI 기반 맞춤형 여행 일정 생성기 - 당신만을 위한 최적의 여행 경로를 AI가 설계합니다">
