--- a/profile.html
+++ b/profile.html
@@ -1,5 +1,6 @@
+<!-- User Trip Collection -->
 <!DOCTYPE html>
-<html lang="ko">
+<html class="light" lang="ko">
 
 <head>
     <!-- Google tag (gtag.js) -->
@@ -11,393 +12,144 @@
 
         gtag('config', 'G-KESMY9MVTT');
     </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>내 정보 | Plan.It</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-
-    <!-- Supabase & Auth Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="supabase.js" defer></script>
-    <script src="auth.js" defer></script>
-    <script src="profile.js" defer></script>
-
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>내 여행 보관함 | VoyageAI</title>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@300;400;500;600;700&amp;display=swap"
+        rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
+        rel="stylesheet" />
+    <script id="tailwind-config">
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        "primary": "#137fec",
+                        "background-light": "#f6f7f8",
+                        "background-dark": "#101922",
+                    },
+                    fontFamily: {
+                        "display": ["Pretendard", "sans-serif"],
+                        "sans": ["Pretendard", "sans-serif"]
+                    },
+                    borderRadius: {
+                        "DEFAULT": "0.25rem",
+                        "lg": "0.5rem",
+                        "xl": "0.75rem",
+                        "full": "9999px"
+                    },
+                },
+            },
+        }
+    </script>
     <style>
-        /* Profile Page Styles */
         body {
-            background-color: #f3f4f6;
-            min-height: 100vh;
+            font-family: 'Pretendard', sans-serif;
         }
 
-        /* Header */
-        .profile-header {
-            height: 64px;
-            background: white;
-            display: flex;
-            align-items: center;
-            padding: 0 16px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .back-btn {
-            background: none;
-            border: none;
-            font-size: 24px;
-            cursor: pointer;
-            padding: 8px;
-            margin-right: 12px;
-            color: #1f2937;
-        }
-
-        .header-title {
-            font-size: 18px;
-            font-weight: 700;
-            color: #1f2937;
-            margin: 0;
-        }
-
-        /* Profile Container */
-        .profile-container {
-            display: flex;
-            justify-content: center;
-            padding: 24px 16px;
-        }
-
-        .profile-card {
-            background: white;
-            width: 100%;
-            max-width: 600px;
-            border-radius: 12px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 24px;
-            box-sizing: border-box;
-        }
-
-        /* Sections */
-        .profile-section {
-            margin-bottom: 24px;
-        }
-
-        .section-label {
-            display: block;
-            font-size: 14px;
-            font-weight: 700;
-            color: #374151;
-            margin-bottom: 12px;
-        }
-
-        /* Lift Divider */
-        .divider {
-            border: 0;
-            border-top: 1px solid #e5e7eb;
-            margin: 24px 0;
-        }
-
-        /* Profile Image */
-        .profile-image-wrapper {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 24px;
-        }
-
-        .profile-image {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            background-color: #2563eb;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 48px;
-            color: white;
-            box-shadow: 0 4px 6px rgba(37, 99, 235, 0.2);
-        }
-
-        /* Inputs */
-        .input-group {
-            margin-bottom: 16px;
-        }
-
-        .input-group label {
-            display: block;
-            font-size: 14px;
-            font-weight: 500;
-            color: #6b7280;
-            margin-bottom: 6px;
-        }
-
-        .input-read,
-        .input-edit {
-            width: 100%;
-            height: 44px;
-            padding: 0 12px;
-            border-radius: 8px;
-            font-size: 16px;
-            font-family: inherit;
-            box-sizing: border-box;
-        }
-
-        .input-read {
-            background-color: #f3f4f6;
-            border: 1px solid transparent;
-            color: #4b5563;
-        }
-
-        .input-edit {
-            background-color: white;
-            border: 1px solid #d1d5db;
-            color: #1f2937;
-            transition: border-color 0.2s;
-        }
-
-        .input-edit:focus {
-            outline: none;
-            border-color: #2563eb;
-            box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.1);
-        }
-
-        /* Buttons */
-        .button-group {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 8px;
-        }
-
-        .select-btn {
-            height: 40px;
-            padding: 0 16px;
-            border-radius: 8px;
-            border: none;
-            background-color: #f3f4f6;
-            color: #6b7280;
-            font-family: inherit;
-            font-size: 14px;
-            font-weight: 500;
-            cursor: pointer;
-            transition: all 0.2s;
-        }
-
-        .select-btn:hover {
-            background-color: #e5e7eb;
-        }
-
-        .select-btn.active {
-            background-color: #2563eb;
-            color: white;
-        }
-
-        /* Stats Grid */
-        .stats-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 12px;
-            background-color: #f9fafb;
-            padding: 16px;
-            border-radius: 12px;
-            margin-bottom: 24px;
-        }
-
-        .stat-item {
-            text-align: center;
-        }
-
-        .stat-label {
-            font-size: 13px;
-            color: #6b7280;
-            margin-bottom: 4px;
-            display: block;
-        }
-
-        .stat-value {
-            font-size: 18px;
-            font-weight: 700;
-            color: #1f2937;
-        }
-
-        /* Save Button */
-        .save-btn {
-            width: 100%;
-            height: 48px;
-            background-color: #2563eb;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            font-size: 16px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: background-color 0.2s;
-        }
-
-        .save-btn:hover {
-            background-color: #1d4ed8;
-        }
-
-        .save-btn:disabled {
-            background-color: #93c5fd;
-            cursor: not-allowed;
-        }
-
-        /* Toast */
-        .toast {
-            position: fixed;
-            top: 24px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: #10b981;
-            color: white;
-            padding: 12px 24px;
-            border-radius: 24px;
-            font-weight: 500;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-            opacity: 0;
-            visibility: hidden;
-            transition: all 0.3s;
-            z-index: 1000;
-        }
-
-        .toast.show {
-            opacity: 1;
-            visibility: visible;
-            top: 32px;
-        }
-
-        @media (max-width: 768px) {
-            .profile-card {
-                width: 100%;
-                padding: 20px 16px;
-            }
-
-            .button-group {
-                flex-direction: column;
-            }
-
-            .button-group .select-btn {
-                width: 100%;
-            }
-
-            /* 예외: 여행 스타일은 버튼 텍스트 길이에 따라 흐르도록 유지하거나, 너무 길면 full width */
-            /* 디자인 가이드: "버튼들이 세로로 쌓임 (flex-direction: column)" */
-
-            /* 여행 통계 폰트 조정 */
-            .stat-value {
-                font-size: 16px;
-            }
+        .material-symbols-outlined {
+            font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
         }
     </style>
+    <!-- Supabase CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 
-<body>
-    <!-- Header -->
-    <header class="profile-header">
-        <button class="back-btn" onclick="goBack()">←</button>
-        <h1 class="header-title">내 정보</h1>
-    </header>
-
-    <!-- Main Content -->
-    <main class="profile-container">
-        <div class="profile-card">
-            <!-- Profile Image -->
-            <div class="profile-image-wrapper">
-                <div class="profile-image">👤</div>
-            </div>
-
-            <!-- Basic Info -->
-            <div class="profile-section">
-                <div class="input-group">
-                    <label>이메일</label>
-                    <input type="text" id="email" class="input-read" readonly value="-">
+<body
+    class="bg-background-light dark:bg-background-dark text-[#0d141b] dark:text-slate-100 transition-colors duration-200">
+    <div class="relative flex min-h-screen flex-col">
+        <header
+            class="sticky top-0 z-50 w-full border-b border-solid border-[#e7edf3] dark:border-slate-800 bg-white/80 dark:bg-background-dark/80 backdrop-blur-md px-6 md:px-20 py-3">
+            <div class="max-w-[1200px] mx-auto flex items-center justify-between">
+                <div class="flex items-center gap-8 cursor-pointer" onclick="location.href='index.html'">
+                    <div class="flex items-center gap-2 text-primary">
+                        <span class="material-symbols-outlined text-3xl">auto_awesome</span>
+                        <h1 class="text-xl font-bold tracking-tight">VoyageAI</h1>
+                    </div>
                 </div>
-                <div class="input-group">
-                    <label>닉네임</label>
-                    <input type="text" id="nickname" class="input-edit" placeholder="닉네임을 입력하세요">
-                </div>
-                <div class="input-group">
-                    <label>가입일</label>
-                    <input type="text" id="joinDate" class="input-read" readonly value="-">
+                <div class="flex flex-1 justify-end items-center gap-6">
+                    <button onclick="location.href='create.html'"
+                        class="flex items-center gap-2 bg-primary hover:bg-primary/90 text-white px-5 py-2 rounded-lg text-sm font-bold transition-all shadow-sm">
+                        <span class="material-symbols-outlined text-lg">add</span>
+                        <span>새 일정 만들기</span>
+                    </button>
+                    <div id="userProfileAvatar"
+                        class="h-10 w-10 rounded-full border-2 border-primary/20 bg-cover bg-center"
+                        style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBn3wwj3eLiQS0rX0RyJqlrRgIu85slvfeMaeZrr1wknwPPSSMPIg1lSgQuh6Wr9x-w2o-8etpyw6eUqkYsqjWb_1w9cwK7FZkuncyk0FiODFW1xmvUsqApDbVLrBT_tuwVRkMIwWMogLRpyHip7aSl7LDgp7RNZtFkaoiWi571NsiJXMcUg7S5alPgEBoNNgWYN9qhSDt9PSEy4Tn-Tsd5XQY1T1tNdMDtG0GHj3loX1alQ-LPATsYQedMJmKY57cs_lUCEo_Nx-I')">
+                    </div>
                 </div>
             </div>
-
-            <hr class="divider">
-
-            <!-- Travel Style -->
-            <div class="profile-section">
-                <label class="section-label">여행 스타일</label>
-                <div class="button-group" id="styleGroup">
-                    <button class="select-btn" data-value="food">🍽️ 맛집 탐방</button>
-                    <button class="select-btn" data-value="relax">⛱️ 휴양</button>
-                    <button class="select-btn" data-value="activity">🏄 액티비티</button>
-                    <button class="select-btn" data-value="culture">🎭 문화예술</button>
-                    <button class="select-btn" data-value="shopping">🛍️ 쇼핑</button>
-                    <button class="select-btn" data-value="nature">🌿 자연 탐험</button>
-                    <button class="select-btn" data-value="photo">📷 포토 스팟</button>
-                    <button class="select-btn" data-value="nightlife">🌙 나이트라이프</button>
+        </header>
+        <main class="flex-1 w-full max-w-[1200px] mx-auto px-6 md:px-20 py-10">
+            <div class="flex flex-col md:flex-row items-center md:items-end justify-between gap-6 mb-12">
+                <div class="flex flex-col md:flex-row items-center gap-6">
+                    <div class="relative">
+                        <div id="profileImageBig"
+                            class="h-32 w-32 rounded-full border-4 border-white dark:border-slate-800 shadow-xl bg-cover bg-center"
+                            style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuD0H2Q-V4-lvUtfU1EridebJ_aPmx0wE8Ds4h-rAMwLv0RybJe9VJwkMvK7I6lIncGEOQ01YMy_1pPb9Sa4JDqdWTKRRBQLY3uDGisfu8hcePj8jNxJPYPFTpner03sI6ESzOsg4PI3cTXjcywqqDjuxjszDoPIwcDmfm0TY2N20Nr68q5PgTQx6PgyJOrxlhMTwK0E9pDg_TpbM_rQzLgL0hosJBoliC00v1xLxhuHZC914TPF8LW7SxQUMaNgEjPkqchz9PUzsG8')">
+                        </div>
+                    </div>
+                    <div class="text-center md:text-left">
+                        <h2 class="text-3xl font-bold tracking-tight" id="profileNickname">게스트</h2>
+                        <div
+                            class="flex items-center justify-center md:justify-start gap-4 mt-1 text-slate-500 dark:text-slate-400">
+                            <p id="profileEmail" class="text-sm"></p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <!-- Companion Type -->
-            <div class="profile-section">
-                <label class="section-label">주로 누구와 여행하시나요?</label>
-                <div class="button-group" id="companionGroup">
-                    <button class="select-btn" data-value="alone">혼자</button>
-                    <button class="select-btn" data-value="family">가족</button>
-                    <button class="select-btn" data-value="couple">커플</button>
-                    <button class="select-btn" data-value="friends">친구</button>
+            <section class="mb-16">
+                <div class="flex items-center justify-between mb-6">
+                    <div class="flex items-center gap-3">
+                        <span class="material-symbols-outlined text-primary">bookmark</span>
+                        <h3 class="text-2xl font-bold">내 여행 보관함</h3>
+                    </div>
                 </div>
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6" id="savedTripsList">
+                    <!-- Dynamic List -->
+                    <div class="col-span-full text-center py-10 text-gray-500">
+                        저장된 여행 일정이 없습니다.
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer class="mt-auto py-10 px-6 md:px-20 border-t border-[#e7edf3] dark:border-slate-800 text-center">
+            <div class="flex flex-col items-center gap-4">
+                <div class="flex items-center gap-2 text-primary/60">
+                    <span class="material-symbols-outlined">auto_awesome</span>
+                    <span class="font-bold tracking-tight">VoyageAI</span>
+                </div>
+                <p class="text-slate-500 text-sm">© 2024 VoyageAI Inc. 모든 권리 보유.</p>
             </div>
+        </footer>
+    </div>
 
-            <!-- Budget Level -->
-            <div class="profile-section">
-                <label class="section-label">여행 예산</label>
-                <div class="button-group" id="budgetGroup">
-                    <button class="select-btn" data-value="low">💰 가성비</button>
-                    <button class="select-btn" data-value="medium">💵 중간</button>
-                    <button class="select-btn" data-value="high">💎 럭셔리</button>
-                </div>
-            </div>
-
-            <hr class="divider">
-
-            <!-- Stats -->
-            <label class="section-label" style="text-align: center; margin-bottom: 16px;">내 여행 기록</label>
-            <div class="stats-grid">
-                <div class="stat-item">
-                    <span class="stat-label">계획한 여행</span>
-                    <span class="stat-value" id="statPlanned">0회</span>
-                </div>
-                <div class="stat-item">
-                    <span class="stat-label">저장한 일정</span>
-                    <span class="stat-value" id="statSaved">0개</span>
-                </div>
-                <div class="stat-item">
-                    <span class="stat-label">방문 예정</span>
-                    <span class="stat-value" id="statUpcoming">0곳</span>
-                </div>
-            </div>
-
-            <!-- Action -->
-            <button class="save-btn" id="saveBtn">저장하기</button>
-        </div>
-    </main>
-
-    <!-- Toast Notification -->
-    <div id="toast" class="toast">프로필이 저장되었습니다</div>
-
+    <!-- Scripts -->
+    <script src="supabase.js"></script>
+    <script src="auth.js"></script>
     <script>
-        function goBack() {
-            // history가 있으면 뒤로, 없으면 index.html로
-            if (document.referrer && document.referrer.indexOf(window.location.host) !== -1) {
-                history.back();
-            } else {
-                window.location.href = 'index.html';
+        document.addEventListener('DOMContentLoaded', async function () {
+            // Auth check
+            if (window.Auth) {
+                const session = await window.Auth.getSession();
+                if (session && session.user) {
+                    document.getElementById('profileNickname').textContent = session.user.email.split('@')[0]; // Simple nickname
+                    document.getElementById('profileEmail').textContent = session.user.email;
+
+                    // Load trips from DB (Note: function needs to exist in auth.js or script.js)
+                    // For now, let's just show a message or valid placeholder
+                } else {
+                    // Not logged in
+                    if (confirm('로그인이 필요합니다.')) {
+                        window.location.href = 'index.html';
+                    }
+                }
             }
-        }
+        });
     </script>
 </body>
 
