--- a/create.html
+++ b/create.html
@@ -74,10 +74,19 @@
                     <h2 class="text-lg font-bold leading-tight tracking-[-0.015em]">VoyageAI</h2>
                 </div>
                 <div class="flex flex-1 justify-end gap-8">
-                    <div class="flex items-center gap-9">
+                    <div class="flex items-center gap-4">
                         <a class="text-gray-700 dark:text-gray-300 text-sm font-medium leading-normal"
                             href="itinerary.html">내 여행</a>
-                        <a class="text-gray-700 dark:text-gray-300 text-sm font-medium leading-normal" href="#">고객지원</a>
+
+                        <!-- Auth UI -->
+                        <div id="authButtons">
+                            <button id="loginBtn"
+                                class="text-sm font-bold text-gray-700 hover:text-primary">로그인</button>
+                        </div>
+                        <div id="userProfile" style="display: none;" class="flex items-center gap-3">
+                            <div id="userAvatar" class="w-8 h-8 rounded-full bg-gray-200 bg-cover bg-center"></div>
+                            <button id="logoutBtn" class="text-sm text-gray-500 hover:text-primary">로그아웃</button>
+                        </div>
                     </div>
                 </div>
             </header>
@@ -147,7 +156,7 @@
                                         <span class="text-sm font-bold dark:text-white">휴식</span>
                                     </div>
                                     <div class="cursor-pointer group flex flex-col items-center justify-center p-4 rounded-xl border-2 border-gray-100 dark:border-gray-800 hover:border-primary transition-all style-card"
-                                        data-value="activity">
+                                        data-value="adventure">
                                         <div
                                             class="size-12 rounded-full bg-gray-50 dark:bg-gray-800 flex items-center justify-center mb-2 group-hover:bg-primary/10">
                                             <span
@@ -195,9 +204,9 @@
                                     <button class="px-4 py-2 border rounded-full hover:bg-gray-100 companion-btn"
                                         data-value="alone">혼자</button>
                                     <button class="px-4 py-2 border rounded-full hover:bg-gray-100 companion-btn"
-                                        data-value="friend">친구</button>
+                                        data-value="friends">친구</button>
                                     <button class="px-4 py-2 border rounded-full hover:bg-gray-100 companion-btn"
-                                        data-value="partner">연인</button>
+                                        data-value="couple">연인</button>
                                     <button class="px-4 py-2 border rounded-full hover:bg-gray-100 companion-btn"
                                         data-value="family">가족</button>
                                 </div>
@@ -245,6 +254,8 @@
     <!-- Scripts -->
     <script src="supabase.js"></script>
     <script src="auth.js"></script>
+    <script src="auth.js"></script>
+    <script src="auth-ui.js"></script>
     <script src="api/generate-itinerary.js"></script>
     <!-- NOTE: This is likely server side, but we need client side logic here -->
 
@@ -294,7 +305,7 @@
                 const companion = companionBtn ? companionBtn.dataset.value : 'alone';
 
                 const budgetVal = document.getElementById('budgetRange').value;
-                const budgetMap = { '1': 'low', '2': 'medium', '3': 'high' };
+                const budgetMap = { '1': 'budget', '2': 'mid', '3': 'luxury' };
                 const budget = budgetMap[budgetVal];
 
                 if (!destination || !startDate || !endDate) {
