--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </script>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>VoyageAI - 프리미엄 여행 랜딩 페이지</title>
+    <title>VoyageAI - AI 기반 맞춤형 여행 플래너</title>
     <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@300;400;500;600;700&amp;display=swap"
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&amp;display=swap" rel="stylesheet" />
