--- a/itinerary.html
+++ b/itinerary.html
@@ -51,6 +51,12 @@
         .no-scrollbar::-webkit-scrollbar { display: none; }
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
     </style>
+    <!-- Leaflet Map CDN -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
     <!-- Supabase CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
@@ -134,14 +140,10 @@
                 </div>
             </section>
 
-            <!-- Map Section Placeholder - using simplified view for now as no map API key provided -->
-            <section class="w-[450px] bg-slate-200 dark:bg-slate-900 shrink-0 relative hidden lg:block">
-                <div class="absolute inset-0 flex items-center justify-center text-gray-500">
-                    <div>
-                        <span class="material-symbols-outlined text-6xl block text-center mb-2">map</span>
-                        <p class="text-center">지도 보기 (준비 중)</p>
-                    </div>
-                </div>
+            <!-- Map Section -->
+            <section
+                class="w-[450px] bg-slate-100 dark:bg-slate-900 shrink-0 relative hidden lg:block border-l border-[#e7edf3] dark:border-slate-800">
+                <div id="map" class="w-full h-full z-0"></div>
             </section>
         </main>
     </div>
@@ -169,6 +171,14 @@
             try {
                 const itinerary = JSON.parse(itineraryData);
                 renderItinerary(itinerary);
+
+                // Initialize Map
+                if (tripInfo) {
+                    const info = JSON.parse(tripInfo);
+                    if (info.destinations && info.destinations.length > 0) {
+                        initMap(info.destinations[0]);
+                    }
+                }
             } catch (e) {
                 console.error('Data parse error', e);
             }
