--- a/profile.html
+++ b/profile.html
@@ -198,10 +198,9 @@
                             </div>
                         </div>
                     `;
-                    // Redirect to itinerary view (passing ID would be needed in future, currently just static view or load logic)
-                    // For now, simple alert or reload (real implementation needs a way to view specific trip)
+                    // Redirect to itinerary view with Trip ID
                     card.onclick = () => {
-                        alert('상세 보기 기능은 준비 중입니다.');
+                        window.location.href = `itinerary.html?tripId=${trip.id}`;
                     };
                     listContainer.appendChild(card);
                 });
